--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+.ipynb
 # C extensions
 *.so
 
@@ -94,12 +95,6 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
-
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
@@ -112,10 +107,8 @@ ipython_config.py
 #pdm.lock
 #   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
 #   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
+#   https://pdm.fming.dev/#use-with-ide
 .pdm.toml
-.pdm-python
-.pdm-build/
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
@@ -167,5 +160,99 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# PyPI configuration file
-.pypirc
+# Packages
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.ZIP
+
+# Images
+##########
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.bmp
+*.tiff
+*.tif
+*.ico
+*.jfif
+*.webp
+*.svg
+*.TIF
+*.BSQ
+*.bsq
+*.npy
+*.csv
+*.HDR
+*.hdr
+*.he5
+*.points
+*.nc
+
+
+
+=======
+
+# Microsoft Office
+*.csv
+
+# QGIS files
+*.xml
+
+
+=======
+# Additional image or data files
+*.tif.met
+*.hdf
+*.aux.xml
+*:Zone.Identifier
+*.hdf.met
+*.spectrum.txt
+*.nc
+AST_0*
+request.json
+*.html
+*.parquet
+*.feather
+*.kmz
+*.db
+
+
+# Secrets
+*secrets.ini
+
+
+#prisma_indices
+notebooks/prisma-indices/spec_lib/
+notebooks/prisma-indices/data_prisma
+notebooks/prisma-indices/results
+
+data/
+=======
+notebooks/prisma-indices/spec_lib/
+
+
+# Folders
+mtmf_research/
+results_mtmf/
+**/Notebooks/
+to_remove/
+=======
+F>>
+*/bare_soil_param_selection
+
+# Private dirs
+#############
+tests
+UDEMY
+data
+dbs
+
+# Secrets
+*secrets.json
